--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,8 +12,8 @@ services:
     ports:
       - 8000:8000
     depends_on:
-      - postgres
-      - redis
+      postgres:
+        condition: service_healthy
 
   postgres:
     image: postgres:latest
@@ -25,6 +25,11 @@ services:
     ports:
       - 5432:5432
     restart: always
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready -h postgres -p 5432"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
     
   redis:
     image: redis:latest
